--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -3,7 +3,10 @@ $medium-screen: 600px;
 $large-screen: 900px;
 
 // Typography
-$base-font-family: $font-stack-system;
+
+@import url('https://fonts.googleapis.com/css?family=PT+Sans');
+
+$base-font-family: 'PT Sans', sans-serif;
 $heading-font-family: $base-font-family;
 
 // Font Sizes
