--- a/src/styles/base/_tables.scss
+++ b/src/styles/base/_tables.scss
@@ -6,14 +6,12 @@ table {
 }
 
 th {
-  border-bottom: 1px solid shade($base-border-color, 25%);
   font-weight: 600;
   padding: $small-spacing 0;
-  text-align: left;
+  text-align: center;
 }
 
 td {
-  border-bottom: $base-border;
   padding: $small-spacing 0;
 }
 
