--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -4,7 +4,7 @@ $large-screen: 900px;
 
 // Typography
 
-@import url('https://fonts.googleapis.com/css?family=PT+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600');
 
 $base-font-family: 'PT Sans', sans-serif;
 $heading-font-family: $base-font-family;
