--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -1,24 +1,31 @@
-<header></header>
-<main>
 
+
+<main>
     <div class="create-route-container">
-        <form name="createRouteForm">
+
           <h3>Create New Route</h3>
           <button id="addLocBtn" ng-click="create.addFieldset()">Add Another Location</button>
-            <fieldset name="location" ng-repeat="index in create.fieldsets">
+          <form name="createRouteForm" ng-submit="create.generate()">
+            <fieldset name="location" ng-repeat="fieldset in create.formFieldsets">
                 <legend for="location">Add Location</legend>
-                <label for="name">Name</label>
-                <input name="name" type="text" placeholder="Location Name">
-                <label for="address">Address</label>
-                <input name="address" type="text" placeholder="Address">
-                <label for="city">City</label>
-                <input name="city" type="text" placeholder="City">
-                <label for="state">State</label>
-                <select name="state">
-                    <option ng-repeat="state in create.states">{{state.abbreviation}}</option>
-                </select>
-                <label for="zip">Zip</label>
-                <input name="zip" type="text" placeholder="Zipcode">
+
+                  <label for="name">Name</label>
+                  <input name="name" type="text" placeholder="Location Name" ng-model="fieldset.location.name">
+
+                  <label for="address">Address</label>
+                  <input name="address" type="text" placeholder="Address" ng-model="fieldset.location.street">
+
+                  <label for="city">City</label>
+                  <input name="city" type="text" placeholder="City" ng-model="fieldset.location.city">
+
+                  <label for="state">State</label>
+                  <select name="state" ng-model="fieldset.location.state">
+                      <option ng-repeat="state in create.states">{{state.abbreviation}}</option>
+                  </select>
+
+                  <label for="zip">Zip</label>
+                  <input name="zip" type="text" placeholder="Zip" ng-model="fieldset.location.zip">
+
             </fieldset>
             <button id="createRouteBtn" type="submit">Create Route</button>
         </form>
