--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -5,26 +5,26 @@
 
           <h3>Create New Route</h3>
           <button id="addLocBtn" ng-click="create.addFieldset()">Add Another Location</button>
-          <form name="createRouteForm" ng-submit="create.generate()">
+          <form name="createRouteForm" ng-submit="create.createRoute()">
             <fieldset name="location" ng-repeat="fieldset in create.formFieldsets">
                 <legend for="location">Add Location</legend>
 
                   <label for="name">Name</label>
-                  <input name="name" type="text" placeholder="Location Name" ng-model="fieldset.location.name">
+                  <input name="name" type="text" placeholder="Location Name" ng-model="fieldset.name">
 
                   <label for="address">Address</label>
-                  <input name="address" type="text" placeholder="Address" ng-model="fieldset.location.street">
+                  <input name="address" type="text" placeholder="Address" ng-model="fieldset.street">
 
                   <label for="city">City</label>
-                  <input name="city" type="text" placeholder="City" ng-model="fieldset.location.city">
+                  <input name="city" type="text" placeholder="City" ng-model="fieldset.city">
 
                   <label for="state">State</label>
-                  <select name="state" ng-model="fieldset.location.state">
+                  <select name="state" ng-model="fieldset.state">
                       <option ng-repeat="state in create.states">{{state.abbreviation}}</option>
                   </select>
 
                   <label for="zip">Zip</label>
-                  <input name="zip" type="text" placeholder="Zip" ng-model="fieldset.location.zip">
+                  <input name="zip" type="text" placeholder="Zip" ng-model="fieldset.zip">
 
             </fieldset>
             <button id="createRouteBtn" type="submit">Create Route</button>
