--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -23,6 +23,8 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
+$green: #779D83;
+$pale-moss: #AFD0AC;
 $blue: #1565c0;
 $dark-gray: #333;
 $medium-gray: #999;
@@ -30,7 +32,7 @@ $light-gray: #ddd;
 
 // Font Colors
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: $green;
 
 // Border
 $base-border-color: $light-gray;
@@ -39,6 +41,7 @@ $base-border: 1px solid $base-border-color;
 // Background Colors
 $base-background-color: #fff;
 $secondary-background-color: tint($base-border-color, 75%);
+$header-color: $pale-moss;
 
 // Forms
 $form-box-shadow: inset 0 1px 3px rgba(#000, 0.06);
