--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -1,10 +1,13 @@
+<header>
 
+</header>
 
 <main>
     <div class="create-route-container">
-
-          <h3>Create New Route</h3>
-          <button id="addLocBtn" ng-click="create.addFieldset()">Add Another Location</button>
+          <section class="form-header">
+          <h3>Create&nbsp;New&nbsp;Route</h3>
+          <input name="routeName" type="text" placeholder="Route Name">
+        </section>
           <form name="createRouteForm" ng-submit="create.createRoute()">
             <fieldset name="location" ng-repeat="fieldset in create.formFieldsets">
                 <legend for="location">Add Location</legend>
@@ -28,7 +31,7 @@
 
             </fieldset>
             <button id="createRouteBtn" type="submit">Create Route</button>
-        </form>
-
+            </form>
+            <button id="addLocBtn" ng-click="create.addFieldset()">Add Another Location</button>
     </div>
 </main>
