--- a/src/templates/route.html
+++ b/src/templates/route.html
@@ -1,5 +1,13 @@
+<header>
+  <h3 ui-sref="main.create">YAY! now go back to the create form</h3>
+</header>
+
 <main>
-    <h3 ui-sref="main.create">YAY! now go back to the create form</h3>
+  <div class="route-table-container">
+      <section class="table-header">
+        <h3>All Routes</h3>
+      </section>
+
     <table>
         <tr ng-repeat="route in create.routes">
             <td>Route</td>
@@ -7,4 +15,5 @@
                 {{route.length}}</td>
         </tr>
     </table>
+  </div>
 </main>
