--- a/src/styles/partials/_all-routes.scss
+++ b/src/styles/partials/_all-routes.scss
@@ -1,7 +1,8 @@
 .route-table-container {
   width: 80%;
   margin: $base-spacing auto;
-  box-shadow: 1px 1px 5px $medium-gray;
+  background-color: $base-background-color;
+  box-shadow: 0px 1px 5px $medium-gray;
 
   section.table-header {
     min-height: 5vh;
