--- a/src/templates/map.html
+++ b/src/templates/map.html
@@ -1,82 +1,9 @@
-<<<<<<< HEAD
-=======
+
 <header></header>
 
->>>>>>> 49104059a66d994dabeeb0c3feb8a0d4a139f069
 <main>
-    <style>
-        #right-panel {
-            font-family: 'Roboto', 'sans-serif';
-            line-height: 30px;
-            padding-left: 10px;
-        }
-<<<<<<< HEAD
-
-=======
->>>>>>> 49104059a66d994dabeeb0c3feb8a0d4a139f069
-        #right-panel select,
-        #right-panel input {
-            font-size: 10px;
-        }
-<<<<<<< HEAD
-
-        #right-panel select {
-            width: 100%;
-        }
-
-        #right-panel i {
-            font-size: 12px;
-        }
-
-=======
-        #right-panel select {
-            width: 100%;
-        }
-        #right-panel i {
-            font-size: 12px;
-        }
->>>>>>> 49104059a66d994dabeeb0c3feb8a0d4a139f069
-        html,
-        body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-<<<<<<< HEAD
-
-=======
->>>>>>> 49104059a66d994dabeeb0c3feb8a0d4a139f069
-        #right-panel {
-            margin: 20px;
-            border-width: 2px;
-            width: 20%;
-            height: 400px;
-            float: left;
-            text-align: left;
-            padding-top: 0;
-        }
-<<<<<<< HEAD
-
-=======
->>>>>>> 49104059a66d994dabeeb0c3feb8a0d4a139f069
-        #directionsList {
-            margin-top: 10px;
-            background-color: #FFEE77;
-            padding: 10px;
-        }
-<<<<<<< HEAD
-
-=======
->>>>>>> 49104059a66d994dabeeb0c3feb8a0d4a139f069
-        .angular-google-map-container {
-            height: 400px;
-            width: 90%;
-            z-index: 3;
-            margin: 20px auto 0 auto;
-            box-shadow:0px 4px 6px #333333
-        }
-    </style>
-    <google-map scrollwheel="false" control="map.control" center="map.center" draggable="true" zoom="map.zoom" >
+<div class="map-content-container">
+    <google-map scrollwheel="false" control="map.control" center="map.center" draggable="true" zoom="map.zoom">
     </google-map>
     <div id="right-panel">
         <div>
@@ -105,5 +32,6 @@
         </div>
         <div id="directionsList" ng-show="directions.showList"></div>
     </div>
+  </div>
 
 </main>
