debugging styling after merge

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -12,4 +12,6 @@
 
 
 /********** Site ***********/
-@import 'partials/map'
+@import 'partials/create-route';
+@import 'partials/all-routes';
+@import 'partials/map';
