styling allows for navigation between pages

--- a/src/templates/map.html
+++ b/src/templates/map.html
@@ -1,5 +1,9 @@
-
-<header></header>
+<header>
+  <h3 ui-sref="main.create">CREATE.HTML</h3>
+  <h3 ui-sref="main.routes">ROUTE.HTML</h3>
+  <h3 ui-sref="main.map">MAP.HTML</h3>
+  <h3 ui-sref="main.login">LOGIN.HTML</h3>
+</header>
 
 <main>
 <div class="map-content-container">
