--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -17,4 +17,12 @@ body {
 header {
   min-height: 8vh;
   background-color: $header-color;
+    h3 {
+      color: #fff;
+      display: inline-block;
+      margin:$small-spacing;
+      &:hover {
+        color: black;
+      }
+    }
 }
