--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,6 +1,6 @@
 <header>
-  <h3 ui-sref="main.create">CREATE.HTML</h3>
-  <h3 ui-sref="main.routes">ROUTE.HTML</h3>
-  <h3 ui-sref="main.map">MAP.HTML</h3>
-  <h3 ui-sref="main.login">LOGIN.HTML</h3>
+  <h3 ui-sref="main.create">Create Route</h3>
+  <h3 ui-sref="main.routes">View My Routes</h3>
+  <h3 ui-sref="main.map">View Map</h3>
+  <h3 ui-sref="main.login"></h3>
 </header>
