--- a/src/styles/partials/_create-route.scss
+++ b/src/styles/partials/_create-route.scss
@@ -5,8 +5,6 @@ main {
 }
 
 
-
-
 .create-route-container {
 
   width: 80%;
@@ -26,9 +24,10 @@ form {
   }
 
   fieldset {
+    position: relative;
     border: $base-border;
-    padding: $small-spacing / 2;
-    margin-bottom: $small-spacing;
+    padding: 0 $small-spacing / 2;
+    margin-bottom: $small-spacing / 2;
   }
 
   label, input, select {
@@ -65,6 +64,21 @@ form {
 
     select {
       width: 3em;
+    }
+
+
+
+        .x-btn {
+          position: absolute;
+          top: 1em;
+          right: .3em;
+          font-size: .8em;
+          color: $header-color;
+          opacity: 0;
+              &:hover {
+                cursor: default;
+                opacity: 1;
+              }
     }
 
 }
