--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -1,16 +1,16 @@
 <header>
-  <h3 ui-sref="main.create">CREATE.HTML</h3>
-  <h3 ui-sref="main.routes">ROUTE.HTML</h3>
-  <h3 ui-sref="main.map">MAP.HTML</h3>
-  <h3 ui-sref="main.login">LOGIN.HTML</h3>
+  <h3 ui-sref="main.create">Create Route</h3>
+  <h3 ui-sref="main.routes">View My Routes</h3>
+  <h3 ui-sref="main.map">View Map</h3>
+  <h3 ui-sref="main.login"></h3>
 </header>
 
 <main>
     <div class="create-route-container">
           <section class="form-header">
           <h3>Create&nbsp;New&nbsp;Route</h3>
-          <input name="routeName" type="text" placeholder="Route Name" ng-model="create.crew">
-        </section>
+          <input name="routeName" type="text" placeholder="Route Name / Crew Assignment" ng-model="create.crew">
+          </section>
           <form name="createRouteForm" ng-submit="create.createRoute()">
             <fieldset name="location" ng-repeat="fieldset in create.formFieldsets">
                 <legend for="location">Add Location</legend>
@@ -31,6 +31,8 @@
 
                   <label for="zip">Zip</label>
                   <input name="zip" type="text" placeholder="Zip" ng-model="fieldset.zip">
+
+                  <span class="x-btn" ng-click="create.removeFieldset(fieldset)">&#10005;</span>
 
             </fieldset>
             <button id="createRouteBtn" type="submit">Create Route</button>
