delete method works, fleshing out styling of routes page in order to add additional functionality later

--- a/src/styles/base/_tables.scss
+++ b/src/styles/base/_tables.scss
@@ -1,7 +1,7 @@
 table {
   border-collapse: collapse;
   margin: $small-spacing 0;
-  table-layout: fixed;
+  table-layout: auto;
   width: 100%;
 }
 
@@ -21,4 +21,12 @@ tr,
 td,
 th {
   vertical-align: middle;
+}
+
+td:first-child {
+  padding-left: $small-spacing;
+}
+
+td:last-child {
+  padding-right: $small-spacing;
 }
