--- a/src/templates/routes.html
+++ b/src/templates/routes.html
@@ -22,11 +22,12 @@
 
     <table>
         <tr ng-repeat="location in routes.allLocations | orderBy: location.route">
-            <td>{{location.name}}</td>
-            <td>{{location.street}}</td>
+            <td class="name-td">{{location.name}}</td>
+            <td class="address-td">{{location.street}}</td>
             <td>{{location.city}}</td>
             <td>{{location.state}}</td>
             <td>{{location.zip}}</td>
+            <td><span class="x-btn" ng-click="routes.delete(location)">&#10005;</span></td>
         </tr>
     </table>
 
