added buttons to add further functionality

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -3,7 +3,7 @@ $medium-screen: 600px;
 $large-screen: 900px;
 
 // Typography
-
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 @import url('https://fonts.googleapis.com/css?family=PT+Sans');
 
 $base-font-family: 'PT Sans', sans-serif;
