--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -10,7 +10,8 @@
   <div class="locations-table-container">
 
     <section class="table-header">
-      <h3>All Locations</h3>
+      <h3>Locations</h3>
+      <h3>{{routes.currentRoute[0].crew}} Route</h3>
     </section>
 
     <table>
@@ -20,9 +21,16 @@
             <td>{{location.city}}</td>
             <td>{{location.state}}</td>
             <td>{{location.zip}}</td>
-            <td><span class="x-btn" ng-click="routes.delete(location)">&#10005;</span></td>
+            <td>
+              <i class="material-icons">edit</i>
+              <i class="material-icons x-btn" ng-click="routes.delete(location)">clear</i>
+           </td>
         </tr>
     </table>
+    <section class="table-footer">
+        <button>Map Route<i class="material-icons">near_me</i></button>
+        <button>Manage Tasks<i class="material-icons">assignment</i></button>
+    </section>
 
   </div>
 </main>
