offloaded static header to index page

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -27,4 +27,13 @@ header {
         color: $action-color;
       }
     }
-}
+
+    .title-logo {
+      display: inline-block;
+      color: #fff;
+        h1 {
+          margin: $small-spacing;
+        }
+    }
+
+  }
