added logo image to header with images folder in lib directory

--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -31,9 +31,12 @@ header {
     .title-logo {
       display: inline-block;
       color: #fff;
-        h1 {
-          margin: $small-spacing;
+
+        img {
+          width: 100px;
+
         }
+
     }
 
   }
