connected map view to update with current route selected

--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -22,7 +22,7 @@
         </tr>
     </table>
     <section class="table-footer">
-        <button>Map Route<i class="material-icons">near_me</i></button>
+        <button>Map Route<i class="material-icons" ui-sref="main.map">near_me</i></button>
         <button>Manage Tasks<i class="material-icons">assignment</i></button>
     </section>
 
