--- a/src/templates/map.html
+++ b/src/templates/map.html
@@ -14,7 +14,7 @@
   <div class="wayDropDown">
                 <br>
                 <b>Waypoints:</b> <br>
-                <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br>
+                <i>(Ctrl+Click or Cmd+Click (Mac) for multiple selection)</i> <br>
                 <!-- <input type="checkbox" id="checkAll"/> Check all</input> -->
                 <select multiple id="waypoints" ng-click="waypointschange()">
       <option class="wayPointValue" ng-repeat="location in locationsArray" selected="true">{{location.street}}</option>
