updated all-routes view to highlight upon hovering over selected route

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -23,6 +23,7 @@ $small-spacing: $base-spacing / 2;
 $base-z-index: 0;
 
 // Colors
+$celery: #E7F5E3;
 $green: #779D83;
 $pale-moss: #AFD0AC;
 $blue: #1565c0;
