--- a/src/templates/detail.html
+++ b/src/templates/detail.html
@@ -1,5 +1,5 @@
 
-<main>
+<main ng-cloak>
 
   <div class="locations-table-container">
 
@@ -16,7 +16,7 @@
             <td>{{location.state}}</td>
             <td>{{location.zip}}</td>
             <td>
-              <i class="material-icons">edit</i>
+              <!-- <i class="material-icons">edit</i> -->
               <i class="material-icons x-btn" ng-click="routes.delete(location)">clear</i>
            </td>
         </tr>
