--- a/src/templates/create.html
+++ b/src/templates/create.html
@@ -10,21 +10,21 @@
                 <legend for="location">Add Location</legend>
 
                   <label for="name">Name</label>
-                  <input name="name" type="text" placeholder="Location Name" ng-model="fieldset.name">
+                  <input name="name" type="text" placeholder="Location Name" ng-model="fieldset.name" required>
 
                   <label for="address">Address</label>
-                  <input name="address" type="text" placeholder="Address" ng-model="fieldset.street">
+                  <input name="address" type="text" placeholder="Address" ng-model="fieldset.street" required>
 
                   <label for="city">City</label>
-                  <input name="city" type="text" placeholder="City" ng-model="fieldset.city">
+                  <input name="city" type="text" placeholder="City" ng-model="fieldset.city" required>
 
                   <label for="state">State</label>
-                  <select name="state" ng-model="fieldset.state">
+                  <select name="state" ng-model="fieldset.state" required>
                       <option ng-repeat="state in create.states">{{state.abbreviation}}</option>
                   </select>
 
                   <label for="zip">Zip</label>
-                  <input name="zip" type="text" placeholder="Zip" ng-model="fieldset.zip">
+                  <input name="zip" type="text" placeholder="Zip" ng-model="fieldset.zip" required>
 
                   <span class="x-btn" ng-click="create.removeFieldset(fieldset)">&#10005;</span>
 
